# Conduit

./: CMakeLists.txt  LICENSE  README.md  config.example.json
src/cpp/: kioskserver.cpp  kioskserver.h  main.cpp  mainwindow.cpp  mainwindow.h
src/js/: bridge.mjs
template/alert/: index.html
template/parking/: request.json
web/: index.html
